turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:3: error: Missing closing brace `}' assumed here
val STOP   = 0;
^Turmite:3: error: expected class or object definition
val STOP   = 0;
^Turmite:4: error: expected class or object definition
val NOTURN = 1;
^Turmite:5: error: expected class or object definition
val LEFT   = 2;
^Turmite:6: error: expected class or object definition
val BACK   = 4;
^Turmite:7: error: expected class or object definition
val RIGHT  = 8;
^Turmite:9: error: expected class or object definition
val NEXT_COLOR = 0;
^Turmite:10: error: expected class or object definition
val NEXT_MOVE  = 1;
^Turmite:11: error: expected class or object definition
val NEXT_STATE = 2;
^Turmite:16: error: expected class or object definition
var T = new Array(0,1)
^Turmite:17: error: expected class or object definition
var T(0)= new Array(V)
^Turmite:18: error: expected class or object definition
var U = new Array(0,1)
^Turmite:19: error: expected class or object definition
var V = new Array((1,2,0,1,2,1),(0,1,0,0,1,1))
^Turmite:21: error: expected class or object definition
var rule:Array[Array[Array[Int]]] = T[U[V[0]]]
^Turmite:22: error: expected class or object definition
var nbSteps:Int = 8342;
^Turmite:29: error: expected class or object definition
def initLangton(name:String) {
^Turmite:52: error: expected class or object definition
def init(){
^Turmite:66: error: expected class or object definition
def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
^Turmite:74: error: expected class or object definition
def init() {
^